# Kiosk-RW

./: .gitignore  .python-version  API_DOCUMENTATION.md  FRONTEND_SETUP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_VARS.md  README.md  SETUP_GUIDE.md  docker-compose.yml  nixpacks.toml
backend/: .env.example  Dockerfile  README_AUTH.md  alembic.ini  pyproject.toml  requirements.txt
backend/DBchangesscripts/: 01_roles_seed.sql  02_basic_lookups_seed.sql  03_payment_methods_seed.sql  04_branches_seed.sql
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2ae56f7da426_schema_from_models_py_20250808_235148.py  8e28d38de16a_schema_from_models_py_20250801_221125.py  d564e5dab719_initial_schema_created_directly_schema_.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: AuthenticationEndpoints.py  GetAllItemLiveEndPoint.py  ItemLiveAddEndPoint.py  ItemLiveStockReplenishmentEndPoint.py  ItemStopListEndPoint.py  ItemUpdatePropertiesEndPoint.py  KIOSKManagement.py  KioskAdminMonitoringEndpoints.py  KioskAuthenticationEndpoints.py  KioskOrderManagement.py  PaymentGatewayTestEndpoints.py  SuperAdminInit.py  UserManagement.py  __init__.py  auth.py  events_sse.py  superadminfirstcreation.py  users.py
backend/app/auth/: __init__.py  auth_service.py  dependencies.py  kiosk_auth_service.py  kiosk_dependencies.py  password.py
backend/app/database/: DomainModel.py  __init__.py  connection.py  models.py
backend/app/integrations/: __init__.py  fiscal_gateway.py  integrations_config.py  kds_integration.py  payment_gateway.py  printer_gateway.py
backend/app/logic/: AuthenticationEndpointLogic.py  GetAllItemLiveLogic.py  (+10 more)
(+94 files in other folders)
